<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion><parent><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-parent</artifactId><version>3.5.6</version><relativePath/></parent>
 <groupId>com.stockguard</groupId><artifactId>stockguard-parent</artifactId><version>1.0.0</version><packaging>pom</packaging>
 <properties><java.version>21</java.version><testcontainers.version>1.21.3</testcontainers.version></properties>
 <modules><module>shared</module><module>product-service</module><module>inventory-service</module><module>order-service</module></modules>
 <dependencyManagement><dependencies><dependency><groupId>org.testcontainers</groupId><artifactId>testcontainers-bom</artifactId><version>${testcontainers.version}</version><type>pom</type><scope>import</scope></dependency></dependencies></dependencyManagement>
 <build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><configuration><systemPropertyVariables><api.version>1.44</api.version></systemPropertyVariables><argLine>-XX:+EnableDynamicAgentLoading</argLine></configuration></plugin></plugins></build>
</project>